# ya-runtime-ai

./: .gitignore  Cargo.toml  README.md  build.rs
.ci/: pack-build.sh
.github/: event.json
.github/workflows/: ci.yml  fmt-clippy.yml  release.yml  tests.yml
conf/: README.md  ya-dummy-ai.json  ya-runtime-ai.json
gpu-detection/: Cargo.toml  README.md
gpu-detection/src/: lib.rs  model.rs
gpu-info/: Cargo.toml  README.md
gpu-info/src/: lib.rs  model.rs
runtimes/dummy/: Cargo.toml
runtimes/dummy/src/: main.rs
src/: agreement.rs  batches.rs  cli.rs  counter.rs  logs.rs  main.rs  offer-template.json  offer_template.rs  process.rs  signal.rs
src/counter/: combined.rs  duration.rs  requests.rs  requests_duration.rs
src/process/: automatic.rs  automatic_blocking.rs  automatic_directly_from_buffer.rs  automatic_fill_buf.rs  automatic_merged_streams.rs  automatic_new_thread.rs  automatic_new_thread_duct.rs  automatic_new_thread_no_batch_file.rs  automatic_new_thread_no_batch_file_duct.rs  automatic_no_LinesStream.rs  automatic_no_batch_file.rs  automatic_subprocess.rs  automatic_subprocess_exec.rs  automatic_writing_to_stdin.rs  dummy.rs  phoenix.rs  trex.rs  win.rs
src/process/automatic/: config.rs  monitor.rs
tests/: runtime_config.rs
tests/resources/: agreement.json  runtime_config.json
