[package]
name = "ya-runtime-ai"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "runtimes/dummy"
]

[dependencies]
ya-core-model = { git = "https://github.com/golemfactory/yagna.git", rev = "b3f1e8238f26b224729c578eae6c29098d8800d7", features = ["activity", "appkey"] }
ya-runtime-api = { git = "https://github.com/golemfactory/yagna.git", rev = "b3f1e8238f26b224729c578eae6c29098d8800d7" }
ya-service-bus = "0.7.1"
ya-client-model = "0.6.0"
ya-agreement-utils = "0.5"
ya-transfer = { git = "https://github.com/golemfactory/yagna.git", rev = "b3f1e8238f26b224729c578eae6c29098d8800d7" }
ya-counters = { path = "../yagna/exe-unit/components/counters" }

actix = "0.13"
actix-rt = "2"
async-trait = "0.1.77"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
anyhow = "1.0"
env_logger = "0.11"
yansi = "1.0"
chrono = "0.4"
tokio = { version = "1.32", features = ["macros", "signal"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
futures = "0.3"
flexi_logger = { version = "0.28", features = ["colors"] }
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
async-stream = "0.3.5"
# ya-gsb-http-proxy = { git = "https://github.com/golemfactory/yagna.git", rev = "b3f1e8238f26b224729c578eae6c29098d8800d7" }
ya-gsb-http-proxy = { path = "../yagna/exe-unit/components/gsb-http-proxy" }
http = "1.1.0"
bytes = "1.5.0"
humantime = "2.1"
humantime-serde = "1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["jobapi2", "processthreadsapi", "handleapi"] }


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[patch.crates-io]
ya-core-model = { git = "https://github.com/golemfactory/yagna.git", rev = "b3f1e8238f26b224729c578eae6c29098d8800d7" }
