[package]
name = "ya-runtime-ai"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "gpu-detection",
    "runtimes/dummy",
]

[dependencies]
ya-gsb-http-proxy = { git = "https://github.com/golemfactory/yagna.git", rev = "239a359184cd428eff17dedc45cbee5e9bf6053f" }
ya-core-model = { git = "https://github.com/golemfactory/yagna.git", rev = "239a359184cd428eff17dedc45cbee5e9bf6053f", features = ["activity", "appkey"] }
ya-runtime-api = { git = "https://github.com/golemfactory/yagna.git", rev = "239a359184cd428eff17dedc45cbee5e9bf6053f" }
ya-utils-process = { git = "https://github.com/golemfactory/yagna.git", rev = "239a359184cd428eff17dedc45cbee5e9bf6053f" }
ya-service-bus = "0.7.3"
ya-client-model = "0.7"
ya-agreement-utils = "0.5"
ya-transfer = { git = "https://github.com/golemfactory/yagna.git", rev = "239a359184cd428eff17dedc45cbee5e9bf6053f" }
ya-counters = { git = "https://github.com/golemfactory/yagna.git", rev = "239a359184cd428eff17dedc45cbee5e9bf6053f" }
gpu-detection = { path = "gpu-detection" }

actix = "0.13"
actix-rt = "2"
async-trait = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
anyhow = "1.0"
env_logger = "0.11"
yansi = "1.0"
chrono = "0.4.34"
tokio = { version = "1.32", features = ["macros", "signal"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
flexi_logger = { version = "0.28", features = ["colors"] }
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
async-stream = "0.3"
http = "1.1"
bytes = "1.5"
humantime = "2.1"
humantime-serde = "1.1"
thiserror = "1.0.58"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
test-case = "3.3"


[build-dependencies]
static_vcruntime = "2.0"
